# moving_dude

./: CMakeLists.txt
include/: App.hpp  AssetManager.hpp  Controller.hpp  Services.hpp  SpriteSheet.hpp
include/assets/: BaseAssetManager.hpp  FontManager.hpp  SoundManager.hpp  TextureManager.hpp
include/utils/algorithms/: enumerate.hpp  hash.hpp
include/utils/helpers/: CRTP.hpp
include/utils/types/: Result.hpp
src/: App.cpp  main.cpp
